--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,14 @@ android {
 
 dependencies {
 
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    def room_version = "2.2.6"
+    def lifecycle_version = "2.2.5"
+
+    //Room components
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
