--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
+    implementation 'com.robinhood.ticker:ticker:2.0.2'
+
 }
